# agent-recruiter

./: README.md
agent-recruiter/: CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
agent-recruiter/examples/: sample_jd.txt
agent-recruiter/src/agent_recruiter/: __init__.py  cli.py  models.py
agent-recruiter/src/agent_recruiter/agents/: __init__.py  base.py  bias_mitigator.py  github_analyst.py  interview_gen.py  jd_parser.py  outreach_drafter.py  resume_screener.py
agent-recruiter/src/agent_recruiter/scoring/: __init__.py
agent-recruiter/src/agent_recruiter/tools/: __init__.py  cache.py  dashboard_gen.py  database.py  telemetry.py
agent-recruiter/tests/: conftest.py  test_core.py  test_pipeline.py
